added contact info

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="stylesheet" href="../src/styles/global.css" />
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1" /> -->
     <meta
       name="viewport"
@@ -32,16 +33,118 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+    <div id="root" style="padding: 2.5%; min-height: 92vh"></div>
+    <div class="border-top text-monospace">
+      <div class="container-fluid row align-items-center p-3 p-md-3 m-0">
+        <div class="col-100 col-sm-6 text-center text-md-start">
+          Designed with &hearts; By Olajide Olanrewaju
+        </div>
+        <div class="col-100 col-sm-6 text-center text-md-end ps-md-5">
+          <div style="justify-items: center; padding: 0.5em 0em ">
+            <a
+              href="tel:+2349133442800"
+              target="_blank"
+              class="contactme"
+              title="Call Me"
+              style="text-decoration: none"
+            >
+              <img
+                src="./images/phone.png"
+                alt="Call Me"
+                style="text-decoration: none"
+                width="32px"
+                height="32px"
+              /> </a
+            >
+            <a
+              href="https://wa.me:+2349133442800"
+              target="_blank"
+              class="contactme"
+              title="Call Me"
+              style="text-decoration: none"
+            >
+              <img
+                src="./images/whatsapp.png"
+                alt="Whatsapp"
+                style="text-decoration: none"
+                width="32px"
+                height="32px"
+              /> </a
+            ><a
+              href="mailto:olajide.m.olanrewaju@gmail.com"
+              target="_blank"
+              title="Email Me"
+              class="contactme"
+              style="text-decoration: none"
+            >
+              <img
+                src="./images/gmail.png"
+                width="32px"
+                height="32px"
+                style="text-decoration: none"
+                alt="Email"
+              /> </a
+            ><a
+              href="https://www.Github.com/monyasau"
+              target="_blank"
+              title="Contact me on Github"
+              class="contactme"
+              style="text-decoration: none"
+            >
+              <img
+                src="./images/github.png"
+                width="32px"
+                height="32px"
+                style="text-decoration: none"
+                alt="Github"
+              /> </a
+            ><a
+              href="https://www.facebook.com/jidex.olajide.3"
+              target="_blank"
+              title="Contact me on Facebook"
+              style="text-decoration: none"
+              class="contactme"
+            >
+              <img
+                src="./images/facebook.png"
+                style="text-decoration: none"
+                width="32px"
+                height="32px"
+                alt="Facebook"
+              />
+            </a>
+            <a
+              href="https://www.twitter.com/monyasau"
+              target="_blank"
+              title="Contact me on Github"
+              class="contactme"
+              style="text-decoration: none"
+            >
+              <img
+                src="./images/twitter.png"
+                width="32px"
+                height="32px"
+                style="text-decoration: none"
+                alt="Github"
+              /> </a
+            ><a
+              href="https://www.instagram.com/"
+              target="_blank"
+              title="Contact me on Facebook"
+              style="text-decoration: none"
+              class="contactme"
+            >
+              <img
+                src="./images/instagram.png"
+                style="text-decoration: none"
+                width="32px"
+                height="32px"
+                alt="Facebook"
+              />
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
