Updated contact links

--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
           Designed with &hearts; By Olajide Olanrewaju
         </div>
         <div class="col-100 col-sm-6 text-center text-md-end ps-md-5">
-          <div style="justify-items: center; padding: 0.5em 0em ">
+          <div style="justify-items: center; padding: 0.5em 0em">
             <a
               href="tel:+2349133442800"
               target="_blank"
@@ -54,13 +54,13 @@
                 style="text-decoration: none"
                 width="32px"
                 height="32px"
-              /> </a
-            >
+              />
+            </a>
             <a
               href="https://wa.me:+2349133442800"
               target="_blank"
               class="contactme"
-              title="Call Me"
+              title="Whatsapp"
               style="text-decoration: none"
             >
               <img
@@ -87,7 +87,7 @@
             ><a
               href="https://www.Github.com/monyasau"
               target="_blank"
-              title="Contact me on Github"
+              title="My Github profile"
               class="contactme"
               style="text-decoration: none"
             >
@@ -101,7 +101,7 @@
             ><a
               href="https://www.facebook.com/jidex.olajide.3"
               target="_blank"
-              title="Contact me on Facebook"
+              title="My Facebook profile"
               style="text-decoration: none"
               class="contactme"
             >
@@ -114,9 +114,9 @@
               />
             </a>
             <a
-              href="https://www.twitter.com/monyasau"
+              href="https://www.twitter.com/Lanre_360"
               target="_blank"
-              title="Contact me on Github"
+              title="Lanre_360 on twitter"
               class="contactme"
               style="text-decoration: none"
             >
@@ -128,9 +128,9 @@
                 alt="Github"
               /> </a
             ><a
-              href="https://www.instagram.com/"
+              href="https://www.instagram.com/Lanre_360"
               target="_blank"
-              title="Contact me on Facebook"
+              title="Lanre_360 on instagram"
               style="text-decoration: none"
               class="contactme"
             >
